--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,12 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
+    "dotenv": "^16.6.1",
     "express": "^4.19.2",
-    "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^8.3.4"
   },
   "devDependencies": {
