--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,11 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^16.6.1",
     "express": "^4.19.2",
+    "imagekit": "^6.0.0",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^8.3.4"
+    "mongoose": "^8.3.4",
+    "multer": "^2.0.2",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.11"
